# te-insertion-detector

./: .gitignore  .merlin  Makefile  README.md  dune-project  myocamlbuild.ml  opam  te-insertion-detector.opam
app/: art.ml  dune  filter_fastq_with_sam.mlify  jbuild  te_insertion_detector_app.ml
lib/: analysis_pipeline.ml  art.ml  art.mli  bmodel.R  droso_te_fasta_format.ml  dune  filter_fastq_with_sam.ml  igv.ml  igv.mli  insertions_in_fasta.ml  jbuild  match_insertions.ml  misc.ml  original_pipeline.ml  pipeline.ml  pipeline_alt.ml  te_library.ml
lib/pipeline/: EM_ChIP_sample.ml  dna_sample.ml  dune  genomic_sample.ml  ion_torrent_insertions.ml  repo.ml  sample.ml  species.ml
lib/pipeline/scripts/: te_insertion_clustering.R
src/: art.mli  filter_fastq_with_sam.mlify  insertion_ET.ml
