opam-version: "1.2"
name: "te-insertion-detector"
version: "0.0"
maintainer: "Philippe Veber <philippe.veber@gmail.com>"
authors: "Philippe Veber <philippe.veber@gmail.com>"
homepage: "https://github.com/pveber/te-insertion-detector"
bug-reports: "https://github.com/pveber/te-insertion-detector/issues"
license: "GPL3"
dev-repo: "https://github.com/pveber/te-insertion-detector.git"

build: ["jbuilder" "build" "-p" name "-j" jobs]

depends: [
  "biocaml"   {= "dev"}
  "bistro"    {= "dev"}
  "pipes"     {= "dev"}
  "ocamlfind" {build}
]
