(library
 (name te_insertion_detector)
 (public_name te-insertion-detector)
 (libraries biocaml.ez biotk biotope
   bistro.utils cfstream ocaml-r.stats ocaml-r.graphics ocaml-r.grDevices)
 (flags :standard -short-paths)
 (preprocess
  (pps ppx_deriving.std ppx_sexp_conv bistro.ppx ppx_let ppx_enumerate)))
