(library
 (name te_insertion_detector_pipeline)
 (public_name te-insertion-detector.pipeline)
 (libraries bistro.bioinfo core re.pcre te_insertion_detector)
 (flags :standard -short-paths)
 (preprocess
  (pps ppx_deriving.std ppx_sexp_conv bistro.ppx ppx_let ppx_enumerate)))

(rule
  (targets scripts.ml)
  (action (run bash ocamlify_scripts.sh))
  (deps (file ocamlify_scripts.sh) (glob_files scripts/*)))
